--- a/azure/package.json
+++ b/azure/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "dsbapi": "^4.0.4",
     "firebase-admin": "^9.3.0",
+    "googleapis": "^64.0.0",
     "node-html-parser": "^1.3.1"
   }
 }
